removed favicon and fixed error on chart page

--- a/hosted/style.css
+++ b/hosted/style.css
@@ -17,7 +17,7 @@ html, body {
 nav {
     width: 100%;
     height: 50px;
-    background-color: #55acee;
+    background-color: #e40712;
 }
 
 nav:nth-child(1) {
@@ -38,7 +38,7 @@ nav:nth-child(1) {
     text-decoration: none;
     padding: 5px;
     border-radius: 4px;
-    background-color: #55acee;
+    background-color: #e40712;
     transition: background-color 0.4s ease;
 }
 
@@ -48,12 +48,12 @@ nav:nth-child(1) {
 }
 
 .characterForm {
-    border: 2px solid #338acc;
+    border: 2px solid #e40712;
     height: 35px;
     width: auto;
     margin-top:0px;
     padding-top:10px;
-    background-color: #55acee;
+    background-color: #e40712;
     border-bottom-right-radius: 4px;
     border-top-right-radius: 4px;
 }
@@ -75,7 +75,7 @@ nav:nth-child(1) {
     transition: background-color 0.4s ease;
     display: inline;
     width: 90px;
-    background-color: #55acee;
+    background-color: #e40712;
     border-radius: 2px;
     color: white;
     text-decoration: none;
@@ -87,7 +87,7 @@ nav:nth-child(1) {
 
 .makeCharacterSubmit:hover {
     transition: background-color 0.4s ease;
-    background-color: #338acc;
+    background-color: #e40712;
 }
 
 .mainForm {
@@ -132,7 +132,7 @@ nav:nth-child(1) {
 
 .formSubmit:hover {
     transition: background-color 0.4s ease;
-    background-color: #338acc;
+    background-color: #e40712;
 }
 
 #user, #pass, #pass2 {
@@ -144,7 +144,7 @@ nav:nth-child(1) {
 
 #user:focus, #pass:focus, #pass2:focus {
     outline: none;
-    box-shadow: 0px 0px 1px 1px #55acee;
+    box-shadow: 0px 0px 1px 1px #e40712;
 }
 
 #characterMessage {
@@ -192,7 +192,7 @@ nav:nth-child(1) {
 #characters {
     width: 60%;
     min-width: 400px;
-    border: 2px solid #55acee;
+    border: 2px solid #e40712;
     border-radius: 4px;
     margin: 0 auto;
     margin-top: 100px;
@@ -203,9 +203,9 @@ nav:nth-child(1) {
     margin: 0 auto;
     margin-top: 2px;
     margin-bottom: 2px;
-    border: 2px solid #55acee;
+    border: 2px solid #e40712;
     border-radius: 4px;
-    background-color: #55acee;
+    background-color: #e40712;
     padding: 10px;
     min-height:60px;
     overflow: hidden;
@@ -215,7 +215,7 @@ nav:nth-child(1) {
     transition: border-color 0.2s ease-out;
     border-color: rgba(255,255,255, 0.8);
     transition: background-color 2.6s ease-out;
-    background-color: #66bfff;
+    background-color: #e40712;
 }
 
 img.characterFace {
