--- a/views/charts.handlebars
+++ b/views/charts.handlebars
@@ -16,11 +16,17 @@
       <div class="topnav">
         <a href="/logout">Log Out</a>
         <a href="/chart-maker" class="active">App</a>
-        <a href="/maker">Suggest</a>
+        <a href="/maker">Add Characters</a>
       </div>
     </header>
+
+<div id="adapp">
+<div id="ad1" class="redbox">
+  ad ad ad ad ad ad ad
+</div>
       
 <div id="container" class="redbox">
+
   <div class="textboxXY">
     <p class="contents">Generic</p>
   </div>
@@ -88,6 +94,12 @@
      
   </div>
 </div>
+
+<div id="ad2" class=redbox>
+  Buy DOGE
+</div>
+
+</div>
    
 <div id="chartButtons">  
     <div id="characterSet">
@@ -118,9 +130,6 @@
         <span class="close">x</span>
         <br>
         <div id="modalButtons">
-            <a href="#" id="download" download="alignment-charts.png">
-                Download Image
-            </a> 
         </div>  
       </div>
 </div> 
