--- a/hosted/default-styles.css
+++ b/hosted/default-styles.css
@@ -120,6 +120,15 @@ https://stackoverflow.com/questions/39517793/how-can-we-make-a-4-by-4-grid-using
 */
 * { box-sizing: border-box; }
 
+#adapp {
+    display: flex;
+    flex-direction: row;
+}
+
+#ad1 {width: 10%; margin-left: 10%; margin-top:4vh; height: 36vw;}
+
+#ad2 {width: 10%; margin-right: 10%; margin-top:4vh; height: 36vw;}
+
 #container { width: 36%; height: 36vw; display: flex; flex-direction: row; flex-wrap: wrap; background: #979AA4; margin:auto; margin-top:4vh; padding: 0.5%;}
 
 #container > div {margin: 0.2%; border: black 3px solid; border-radius: 0.5em; display: flex; flex-direction: column; justify-content: center; align-items: center; background: #ddd;}
@@ -194,59 +203,60 @@ canvas{
     margin-bottom: 10px;
 }
 
-/*--------------------------------ADMIN PAGE------------------------------*/
-
-#characters-admin { width: 100%; display: flex; flex-direction: row; flex-wrap: wrap;  }
-
-#characters-admin > div {width: 100%; display: flex; flex-direction: row; flex-wrap: wrap; justify-content: center;}
-
-.cboxadmin { width: 25vw; border: 5px solid #e40712; border-radius: 10px; background-color: #979AA4; margin:20px; display: flex; flex-direction: column; flex-wrap:nowrap; align-items: center;}
-
-.cboxadmin > img {width: 10vw; height: 10vw; padding: 1vw;}
-
-.cboxadmin > div > button {margin: 1vw;}
-
-.cboxadmin > p { font-weight: bold; }
- 
-#deleteDiv {
-    width: 100%;
-    display: flex;
-    justify-content: center;
+.invisible{
+    visibility: hidden;
 }
 
 
 /*--------------------------------SUGGEST PAGE------------------------------*/
 
-#top{
+.characterForm{
+    margin: auto;
+    border: 5px solid #e40712;
+    border-radius: 10px;
+    background-color: #979AA4;
+    padding: 1%;
+}
+
+.characterList{ width: 100%; display: flex; flex-direction: row; flex-wrap: wrap;  }
+
+.characterList > div > div {width: 100%; display: flex; flex-direction: row; flex-wrap: wrap; justify-content: center;}
+
+.character { width: 25vw; border: 5px solid #e40712; border-radius: 10px; background-color: #979AA4; margin:20px; display: flex; flex-direction: column; flex-wrap:nowrap; align-items: center;}
+
+.character img {width: 10vw; height: 10vw; padding: 1vw;}
+
+/*--------------------------------LOGIN PAGE------------------------------*/
+
+.mainForm{
+    margin: auto;
+    border: 5px solid #e40712;
+    border-radius: 10px;
+    background-color: #979AA4;
+}
+
+#content{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 30%;
-    margin: auto;
-    margin-top: 5%;
-    margin-bottom: 5%;
-}
-
-#top input{
-    border: black 3px solid; 
-    border-radius: 0.5em;
-    background-color: #ddd;
-}
-
-#addCharButton{
-    display: flex;
-    justify-content: center;
-}
-
-#suggestContent{
     width: 50%;
     margin: auto;
-    padding: 2%;
-    text-align: center;
+    margin-bottom: 20%;
+    margin-top: 5%;
 }
 
-.character img{
-    width: 11%;
-    height: auto;
+#content > form{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+#content > form > * {
+    width: 80%;
+    text-align: center;
+    margin: 5%;
 }
