--- a/hosted/style.css
+++ b/hosted/style.css
@@ -1,4 +1,4 @@
-html, body {
+/* html, body {
     height: 100%;
     width: 100%;
     margin: 0;
@@ -261,4 +261,4 @@ h3.characterAge {
 
 .character:last-child {
     margin-bottom:10px;
-}
+} */
