--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>CharacterMaker</title>
+  <title>Alignment Chart Creator</title>
   <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
@@ -10,11 +10,11 @@
   <link rel="stylesheet" type="text/css" href="/assets/default-styles.css"/>
 </head>
 <body> 
-  <nav>
+  <div class="topnav">
     <div class="navlink"><a id="loginButton" href="/login">Login</a></div>
     <div class="navlink"><a id="signupButton" href="/signup">Sign up</a></div>
     <div class="navlink"><a id="passwordButton" href="/password">Change Password</a></div>
-  </nav>
+  </div>
   <section id="content"></section>
   <section id="errorMessage"></section>
   <script src="/assets/loginBundle.js"></script>
