--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>CharacterMaker</title>
+  <title>Alignment Chart Creator</title>
   <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
@@ -14,10 +14,13 @@
       <div class="topnav">
         <a href="/logout">Log Out</a>
         <a href="/chart-maker">App</a>
-        <a href="/maker" class="active">Suggest</a>
+        <a href="/maker" class="active">Add Characters</a>
       </div>
     </header>
   <section id="savedCharts">
+      <canvas width="690" height="640">
+		      Your browser doesn't support canvas, so an image can not be created.
+	    </canvas>
   </section>
   <script src="/assets/savedBundle.js"></script>
 </body>
